--- a/db-app/src/app/Components/donors/donor-c-table/donor-c-table.component.html
+++ b/db-app/src/app/Components/donors/donor-c-table/donor-c-table.component.html
@@ -1,75 +1,167 @@
 <div class="container">
-    <div class="actions">
-        <div class="table-actions">
-            <a mat-raised-button>Add New Donor</a>
-            <a mat-raised-button>Delete Selected</a>
-        </div>
-        <div class="filtering">
-            <mat-form-field>
-                <input matInput placeholder="Search" (keyup)="applyFilter($event)">
-            </mat-form-field>
-            <a mat-raised-button>Advanced Filters</a>
-        </div>
+    <div class="table-title">
+        <h1>Donor Control Table</h1>
     </div>
-    <div class="mat-elevation-z8">
-        <table mat-table class="full-width-table" matSort aria-label="Elements">
-            <ng-container matColumnDef="select">
-            <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox 
-                    (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()"
-                    [aria-label]="checkboxLabel()">
-                </mat-checkbox>
-            </th>
-            <td mat-cell *matCellDef="let row">
-                <mat-checkbox   
-                    (click)="$event.stopPropagation()"
-                    (change)="$event ? selection.toggle(row) : null"
-                    [checked]="selection.isSelected(row)"
-                    [aria-label]="checkboxLabel(row)">
-                </mat-checkbox>
-            </td>
+    <div class="table-actions">
+      <a class="buttonStyle deleteButton" color="warn" mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
+      <a class="buttonStyle exportButton" mat-raised-button (click)="onExport(selection.selected)">Export</a>
+      <a class="buttonStyle addButton" mat-raised-button routerLink="/donor-c-registration">Add New Donor</a>
+    </div>
+    <div class="filtering">
+      <mat-form-field class="searchBar">
+        <input matInput placeholder="Search" type="text" (keyup)="applyFilter($event)">
+      </mat-form-field>
+      <br>
+      <form [formGroup]="filterForm">
+      <mat-accordion multi=true id="filterPanel" class="filteringPanel">
+        <mat-expansion-panel [expanded]="filterPanelState">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Advanced Filters</mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-tab-group >
+            <mat-tab label="Personal">
+              <div class="tab-container">
+                <mat-divider vertical=true></mat-divider>
+                <div class="one">
+                  <button mat-button class="filterSelectionButton" (click)="toggleFunction('hairMenu')">Hair Color</button>
+                  <div class="hairMenu toggle-menu" id="hairMenu" style="display: none;">
+                    <mat-selection-list formControlName="hairColor">
+                      <mat-list-option *ngFor="let type of hairType" [value]="type.value">
+                        {{type.view}}
+                      </mat-list-option>
+                    </mat-selection-list>
+                  </div>
+                </div> 
+                <mat-divider vertical=true></mat-divider>
+                <div class="two">
+                  <button mat-button class="filterSelectionButton" (click)="toggleFunction('sexMenu')">Sex</button>
+                  <div class="toggle-menu" id="sexMenu" style="display: none;">
+                    <mat-selection-list formControlName="selectedSex">
+                      <mat-list-option *ngFor="let type of sexType" [value]="type.value">
+                        {{type.view}}
+                      </mat-list-option>
+                    </mat-selection-list>
+                  </div>
+                </div>
+                <mat-divider vertical=true></mat-divider>
+                <div class="three">
+                  <button mat-button class="filterSelectionButton" (click)="toggleFunction('raceMenu')">Race</button>
+                  <div class="toggle-menu" id="raceMenu" style="display: none;">
+                    <mat-selection-list formControlName="selectedRace">
+                      <mat-list-option *ngFor="let type of raceType" [value]="type.value">
+                        {{type.view}}
+                      </mat-list-option>
+                    </mat-selection-list>
+                  </div>
+                </div>
+                <mat-divider vertical=true></mat-divider>
+                <div class="four">
+                  <button mat-button class="filterSelectionButton" (click)="toggleFunction('bloodMenu')">Blood Types</button>
+                  <div class="toggle-menu" id="bloodMenu" style="display: none;">
+                    <mat-selection-list formControlName="bloodType">
+                      <mat-list-option *ngFor="let type of bloodType" [value]="type.value">
+                        {{type.view}}
+                      </mat-list-option>
+                    </mat-selection-list>
+                  </div>
+                </div>
+                <mat-divider vertical=true></mat-divider>
+                <!--
+                <div class="five">
+                  <mat-radio-group formControlName="ageRadio">
+                    <mat-radio-button value="exact">Exact Age</mat-radio-button>
+                    <mat-radio-button value="range">Age Range</mat-radio-button>
+                  </mat-radio-group>
+                  <div *ngIf="filterForm.value.ageRadio == 'exact'">
+                    <mat-form-field>
+                      <mat-label>Exact Age</mat-label>
+                      <input matInput type="text" formControlName="exactAgeControl">
+                    </mat-form-field>
+                  </div>
+                  <div *ngIf="filterForm.value.ageRadio == 'range'">
+                    <mat-form-field>
+                      <mat-label>Lower Age</mat-label>
+                      <input matInput type="text" formControlName="rangeAgeControlLower">
+                    </mat-form-field>
+                    to
+                    <mat-form-field>
+                      <mat-label>Upper Age</mat-label>
+                      <input matInput type="text" formControlName="rangeAgeControlUpper">
+                    </mat-form-field>
+                  </div>
+                </div>
+              -->
+              </div>        
+            </mat-tab>
+            <mat-tab label="Medical">
+            </mat-tab>
+  
+          </mat-tab-group>
+          <button class="resetButton" color="warn" mat-raised-button type="submit" (click)="onResetFilters();accordion.closeAll()">Reset Filters</button>
+          <button class="filterButton" mat-raised-button type="submit" (click)="onApplyFilters();accordion.closeAll()">Apply Filters</button>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </form>
+    </div>
+    <div class="mat-elevation-z8 donor-table">
+      <table mat-table class="full-width-table" matSort aria-label="Elements">
+  
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()"
+                          [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox   (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null"
+                            [checked]="selection.isSelected(row)"
+                            [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+          </td>
         </ng-container>
-
-        <!-- First Name Column -->
+  
+        <!-- Name Column -->
         <ng-container matColumnDef="firstName">
-            <th mat-sort-header mat-header-cell *matHeaderCellDef>First Name</th>
-            <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+          <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
         </ng-container>
-
-        <!-- Last Name Column -->
+  
         <ng-container matColumnDef="lastName">
-            <th mat-sort-header mat-header-cell *matHeaderCellDef>Last Name</th>
-            <td mat-cell *matCellDef="let row">{{row.lastName}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
+          <td mat-cell *matCellDef="let row">{{row.lastName}}</td>
         </ng-container>
-
-        <!-- Date of Birth Column
+  
         <ng-container matColumnDef="dob">
-            <th mat-sort-header mat-header-cell *matHeaderCellDef>Date of Birth</th>
-            <td mat-cell *matCellDef="let row">{{row.birthDate | date}}</td>
-        </ng-container> -->
-
-            <!-- Actions Column
-            <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Actions</th>
-            <td mat-cell matCellDef="let row">
-                <mat-menu #actionsMenu="matMenu">
-                    <button mat-menu-item>Edit</button>
-                    <button mat-menu-item>Delete</button>
-                </mat-menu>
-                <a class="actions-button" mat-raised-button [matMenuTriggerFor]="actionsMenu"></a></td>
-            </ng-container> -->
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator #paginator
-            [length]="dataSource?.data.length"
-            [pageIndex]="0"
-            [pageSize]="50"
-            [pageSizeOptions]="[25, 50, 100, 250]">
-        </mat-paginator>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</th>
+          <td mat-cell *matCellDef="let row">{{row.birthDate | date}}</td>
+        </ng-container>
+  
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Options</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button [matMenuTriggerFor]="optionsMenu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #optionsMenu="matMenu">
+              <button mat-menu-item>Move to Control</button>
+              <button mat-menu-item [routerLink]="['/edit-donor-c', row.id]">Edit</button>
+              <button mat-menu-item (click)="onSingleDelete(row.id)">Delete</button>
+            </mat-menu>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+  
+      <mat-paginator #paginator
+          [length]="dataSource?.data.length"
+          [pageIndex]="0"
+          [pageSize]="25"
+          [pageSizeOptions]="[25, 50, 100, 250]">
+      </mat-paginator>
     </div>
-</div>
+  </div>
