--- a/db-app/src/app/Components/donors/donor-registration/donor-registration.component.html
+++ b/db-app/src/app/Components/donors/donor-registration/donor-registration.component.html
@@ -604,6 +604,11 @@
           <input matInput type="text" formControlName="informantEmail">
         </mat-form-field>
       </mat-expansion-panel>
+      <mat-expansion-panel style="display: none;">
+        <mat-expansion-panel-header>
+          <mat-panel-title>Death Information</mat-panel-title>
+        </mat-expansion-panel-header>
+      </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>Added Fields</mat-panel-title>
