--- a/db-app/src/app/Components/inventory/inventory-cremation-table/inventory-cremation-table.component.html
+++ b/db-app/src/app/Components/inventory/inventory-cremation-table/inventory-cremation-table.component.html
@@ -38,7 +38,7 @@
         <td mat-cell *matCellDef="let row">{{row.UTID}}</td>
       </ng-container>
 
-      <!-- Name Column -->
+      <!-- Donated By Column -->
       <ng-container matColumnDef="donatedby">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Donated By</th>
         <td mat-cell *matCellDef="let row">{{row.DonatedBy}}</td>
@@ -53,7 +53,7 @@
           </button>
           <mat-menu #optionsMenu="matMenu">
             <button mat-menu-item [routerLink]="['/edit-cremation', row.id]">Edit</button>
-            <button mat-menu-item (click)="onSingleDelete(row._id)">Delete</button>
+            <button mat-menu-item (click)="onSingleDelete(row.id)">Delete</button>
           </mat-menu>
         </td>
       </ng-container>
