--- a/db-app/src/app/Components/metrics/metrics-postcran-table/metrics-postcran-table.component.html
+++ b/db-app/src/app/Components/metrics/metrics-postcran-table/metrics-postcran-table.component.html
@@ -1,25 +1,73 @@
-<div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
+<div class="container">
+  <div class="table-title">
+    <h1>Postcran Metric Table</h1>
+  </div>
+  <div class="table-actions">
+    <a class="buttonStyle deleteButton" color="warn" mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
+    <a class="buttonStyle exportButton" mat-raised-button (click)="onExport(selection.selected)">Export</a>
+    <a class="buttonStyle addButton" mat-raised-button routerLink="/enter-adult">Add New Item</a>
+  </div>
+  <div class="filtering">
+    <mat-form-field class="searchBar">
+      <input matInput placeholder="Search" type="text" (keyup)="applyFilter($event)">
+    </mat-form-field>
+  </div>
+  <div class="mat-elevation-z8">
+    <table mat-table class="full-width-table" matSort aria-label="Elements">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
-    </ng-container>
+      <!-- Selection Column-->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()"
+                        [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox   (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <!-- UTID Column -->
+      <ng-container matColumnDef="utid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>UTID</th>
+        <td mat-cell *matCellDef="let row">{{row.UTID}}</td>
+      </ng-container>
 
-  <mat-paginator #paginator
-      [length]="dataSource?.data.length"
-      [pageIndex]="0"
-      [pageSize]="50"
-      [pageSizeOptions]="[25, 50, 100, 250]">
-  </mat-paginator>
+      <!-- Recorder Column -->
+      <ng-container matColumnDef="recorder">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Recorder</th>
+        <td mat-cell *matCellDef="let row">{{row.Recorder}}</td>
+      </ng-container>
+
+      <!-- Actions Columnn -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Options</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button [matMenuTriggerFor]="optionsMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #optionsMenu="matMenu">
+            <button mat-menu-item [routerLink]="['/edit-cremation', row.id]">Edit</button>
+            <button mat-menu-item (click)="onSingleDelete(row.id)">Delete</button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator #paginator
+        [length]="dataSource?.data.length"
+        [pageIndex]="0"
+        [pageSize]="50"
+        [pageSizeOptions]="[25, 50, 100, 250]">
+    </mat-paginator>
+  </div>
 </div>
