added new formatting

--- a/db-app/src/app/Components/inventory/inventory-cremation/inventory-cremation.component.html
+++ b/db-app/src/app/Components/inventory/inventory-cremation/inventory-cremation.component.html
@@ -10,6 +10,10 @@
                     <mat-label>UTID</mat-label>
                     <input matInput type="text" placeholder="UTID" formControlName="UTID">
                 </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Cremation DBID</mat-label>
+                    <input matInput type="text" placeholder="DBID" formControlName="Cremation_DBID">
+                </mat-form-field>
                 <b class="subtitle inline-subtitle">Date Received:</b>
                 <mat-form-field>
                     <mat-label>Date Received</mat-label>
