--- a/db-app/src/app/Components/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/Components/donors/donor-table/donor-table.component.html
@@ -47,7 +47,7 @@
               <div class="three">
                 <button mat-button class="filterSelectionButton" (click)="toggleFunction('raceMenu')">Race</button>
                 <div class="toggle-menu" id="raceMenu" style="display: none;">
-                  <mat-selection-list formControlName="selectedRace">
+                  <mat-selection-list formControlName="otherRace">
                     <mat-list-option *ngFor="let type of raceType" [value]="type.value">
                       {{type.view}}
                     </mat-list-option>
@@ -105,40 +105,40 @@
   </div>
   <div class="mat-elevation-z8 donor-table">
     <table mat-table class="full-width-table" matSort aria-label="Elements">
-
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()"
-                        [aria-label]="checkboxLabel()">
+      
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+            [aria-label]="checkboxLabel()">
           </mat-checkbox>
         </th>
         <td mat-cell *matCellDef="let row">
           <mat-checkbox   (click)="$event.stopPropagation()"
-                          (change)="$event ? selection.toggle(row) : null"
-                          [checked]="selection.isSelected(row)"
-                          [aria-label]="checkboxLabel(row)">
+          (change)="$event ? selection.toggle(row) : null"
+          [checked]="selection.isSelected(row)"
+          [aria-label]="checkboxLabel(row)">
           </mat-checkbox>
         </td>
       </ng-container>
-
+      
       <!-- Name Column -->
       <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
         <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
       </ng-container>
-
+      
       <ng-container matColumnDef="lastName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
         <td mat-cell *matCellDef="let row">{{row.lastName}}</td>
       </ng-container>
-
+      
       <ng-container matColumnDef="dob">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</th>
         <td mat-cell *matCellDef="let row">{{row.birthDate | date}}</td>
       </ng-container>
-
+      
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Options</th>
         <td mat-cell *matCellDef="let row">
@@ -152,16 +152,17 @@
           </mat-menu>
         </td>
       </ng-container>
-
+      
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
     <mat-paginator #paginator
-        [length]="dataSource?.data.length"
-        [pageIndex]="0"
-        [pageSize]="25"
-        [pageSizeOptions]="[25, 50, 100, 250]">
+    [length]="dataSource?.data.length"
+    [pageIndex]="0"
+    [pageSize]="25"
+    [pageSizeOptions]="[25, 50, 100, 250]">
     </mat-paginator>
+    <mat-progress-bar [mode]="mode" [color]="color" [value]="value"></mat-progress-bar>
   </div>
 </div>
