Finished components for inventory, added most of postcran component

--- a/db-app/src/app/Components/inventory/inventory-adult-table/inventory-adult-table.component.html
+++ b/db-app/src/app/Components/inventory/inventory-adult-table/inventory-adult-table.component.html
@@ -59,7 +59,7 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #optionsMenu="matMenu">
-            <button mat-menu-item [routerLink]="['/edit-cremation', row.id]">Edit</button>
+            <button mat-menu-item [routerLink]="['/edit-adult', row.id]">Edit</button>
             <button mat-menu-item (click)="onSingleDelete(row.id)">Delete</button>
           </mat-menu>
         </td>
