Updates for compontents and formatter, as well as docker info

--- a/db-app/src/app/Components/inventory/inventory-subadult-table/inventory-subadult-table.component.html
+++ b/db-app/src/app/Components/inventory/inventory-subadult-table/inventory-subadult-table.component.html
@@ -48,7 +48,7 @@
       <!-- Date Inventoried Column-->
       <ng-container matColumnDef="dateInv">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Inventoried</th>
-        <td mat-cell *matCellDef="let row">{{row.dateInventoried | date}}</td>
+        <td mat-cell *matCellDef="let row">{{row.DateInventoried | date}}</td>
       </ng-container>
 
       <!-- Actions Columnn -->
