--- a/db-app/src/app/Components/inventory/inventory-adult-table/inventory-adult-table.component.html
+++ b/db-app/src/app/Components/inventory/inventory-adult-table/inventory-adult-table.component.html
@@ -18,17 +18,13 @@
       <!-- Selection Column-->
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()"
-                        [aria-label]="checkboxLabel()">
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
           </mat-checkbox>
         </th>
         <td mat-cell *matCellDef="let row">
-          <mat-checkbox   (click)="$event.stopPropagation()"
-                          (change)="$event ? selection.toggle(row) : null"
-                          [checked]="selection.isSelected(row)"
-                          [aria-label]="checkboxLabel(row)">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
           </mat-checkbox>
         </td>
       </ng-container>
@@ -48,7 +44,7 @@
       <!-- Date Inventoried Column-->
       <ng-container matColumnDef="dateInv">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Inventoried</th>
-        <td mat-cell *matCellDef="let row">{{row.dateInventoried | date}}</td>
+        <td mat-cell *matCellDef="let row">{{row.DateInventoried | date}}</td>
       </ng-container>
 
       <!-- Actions Columnn -->
@@ -69,11 +65,8 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator
-        [length]="dataSource?.data.length"
-        [pageIndex]="0"
-        [pageSize]="50"
-        [pageSizeOptions]="[25, 50, 100, 250]">
+    <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="50"
+      [pageSizeOptions]="[25, 50, 100, 250]">
     </mat-paginator>
   </div>
 </div>
